--- a/nginx.conf
+++ b/nginx.conf
@@ -10,12 +10,12 @@ http {
 	proxy_max_temp_file_size 0;
 	limit_traffic_rate_zone rate $remote_addr 32m;
 	log_format timed_combined '[$time_local]\t$remote_addr\t$body_bytes_sent\t $status\t$request_time\t$request\t "$http_user_agent"\t"http://$host"\t"$http_skyclient" "$upstream_cache_status" "$request_body"';
-	access_log /opt/nginx/pdl/logs/nginx-access.log timed_combined;
+	access_log nginx-access.log timed_combined;
  
 	server {
 		listen 80;
 		server_name localhost;
-		error_log /opt/nginx/pdl/logs/error.log debug;
+		error_log error.log debug;
 		include mime.types;
 		
 		location /limit/config {
@@ -42,7 +42,7 @@ http {
 					end
 				if(user_id == "")
 					then
-						local file, err = io.open("/opt/nginx/pdl/conf/addresses/"..ip_address..".dat", "w")
+						local file, err = io.open("conf/addresses/"..ip_address..".dat", "w")
 						if file == nil	
 							then
 								ngx.say(" "..err);
@@ -52,7 +52,7 @@ http {
 								ngx.print(" Throttling for ip=", ip_address, " has been set to ", bps_speed, "B/s.\n")
 							end
 					else
-						local file, err = io.open("/opt/nginx/pdl/conf/addresses/"..user_id..".dat", "w")
+						local file, err = io.open("conf/addresses/"..user_id..".dat", "w")
 						if file == nil
 							then 
 								ngx.say(" "..err)
@@ -72,7 +72,7 @@ http {
 		}
 
 		location / {
-			root /opt/nginx/html;
+			root html;
 		}
 
 		error_page   500 502 503 504  /50x.html;
